src/objects/Bill__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Create_transaction__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Developer</label>
        <referenceTo>Developer__c</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Bills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_date__c</fullName>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>Milestone_Developer__c</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Bills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transactions__c</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Bills</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bill</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Amount__c</columns>
        <columns>Developer__c</columns>
        <columns>Paid__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Bill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <recordTypes>
        <fullName>Developer_payment</fullName>
        <active>true</active>
        <label>Developer payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incoming_Payment</fullName>
        <active>true</active>
        <label>Incoming Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Money_Flow</fullName>
        <active>true</active>
        <label>Money Flow</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Expense</fullName>
        <active>true</active>
        <label>Other Expense</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_amount</fullName>
        <active>true</active>
        <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>The field &quot;Amount&quot; cannot be less zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_on_date</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE( CreatedDate ) &gt;  Due_date__c</errorConditionFormula>
        <errorDisplayField>Due_date__c</errorDisplayField>
        <errorMessage>The field &quot;Due date&quot; cannot be less than the field &quot;Created Date &quot;</errorMessage>
    </validationRules>
</CustomObject>